janelas para o menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,24 @@
         android:theme="@style/Theme.MyApp"
         tools:targetApi="31">
         <activity
+            android:name=".ParceirosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LocalizarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ServicosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DoacoesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AlimentosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PetsActivity"
+            android:exported="false" />
+        <activity
             android:name=".CadUsuActivity"
             android:exported="false" />
         <activity
@@ -22,19 +40,16 @@
             android:exported="false" />
         <activity
             android:name=".SplahActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
